--- a/src/output.css
+++ b/src/output.css
@@ -7,14 +7,12 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-green-800: oklch(44.8% 0.119 151.328);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-stone-300: oklch(86.9% 0.005 56.366);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
-    --container-md: 28rem;
     --container-3xl: 48rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
@@ -185,119 +183,17 @@
   .absolute {
     position: absolute;
   }
-  .fixed {
-    position: fixed;
-  }
   .relative {
     position: relative;
-  }
-  .static {
-    position: static;
-  }
-  .sticky {
-    position: sticky;
   }
   .top-20 {
     top: calc(var(--spacing) * 20);
   }
-  .top-48 {
-    top: calc(var(--spacing) * 48);
-  }
-  .top-\[0px\] {
-    top: 0px;
-  }
-  .top-\[30px\] {
-    top: 30px;
-  }
-  .top-\[130px\] {
-    top: 130px;
-  }
-  .top-\[140px\] {
-    top: 140px;
-  }
-  .top-\[160px\] {
-    top: 160px;
-  }
-  .top-\[180px\] {
-    top: 180px;
-  }
-  .bottom-\[-2px\] {
-    bottom: -2px;
-  }
-  .bottom-\[-8px\] {
-    bottom: -8px;
-  }
-  .bottom-\[-48px\] {
-    bottom: -48px;
-  }
-  .bottom-\[-65px\] {
-    bottom: -65px;
-  }
-  .bottom-\[-70px\] {
-    bottom: -70px;
-  }
-  .bottom-\[-80px\] {
-    bottom: -80px;
-  }
-  .bottom-\[-90px\] {
-    bottom: -90px;
-  }
-  .bottom-\[-100px\] {
-    bottom: -100px;
-  }
-  .bottom-\[-140px\] {
-    bottom: -140px;
-  }
-  .bottom-\[-200px\] {
-    bottom: -200px;
-  }
-  .bottom-\[-230px\] {
-    bottom: -230px;
-  }
   .bottom-\[-260px\] {
     bottom: -260px;
   }
-  .bottom-\[-2340px\] {
-    bottom: -2340px;
-  }
-  .bottom-\[-px\] {
-    bottom: -px;
-  }
-  .bottom-\[8px\] {
-    bottom: 8px;
-  }
-  .bottom-\[140px\] {
-    bottom: 140px;
-  }
-  .bottom-\[160px\] {
-    bottom: 160px;
-  }
-  .bottom-\[px\] {
-    bottom: px;
-  }
   .left-16 {
     left: calc(var(--spacing) * 16);
-  }
-  .left-\[10px\] {
-    left: 10px;
-  }
-  .left-\[160\] {
-    left: 160;
-  }
-  .left-\[160px\] {
-    left: 160px;
-  }
-  .left-\[180px\] {
-    left: 180px;
-  }
-  .left-\[230px\] {
-    left: 230px;
-  }
-  .left-\[235px\] {
-    left: 235px;
-  }
-  .left-\[250px\] {
-    left: 250px;
   }
   .left-\[260px\] {
     left: 260px;
@@ -311,9 +207,6 @@
   .col-span-12 {
     grid-column: span 12 / span 12;
   }
-  .m-0 {
-    margin: calc(var(--spacing) * 0);
-  }
   .m-auto {
     margin: auto;
   }
@@ -326,26 +219,14 @@
   .table {
     display: table;
   }
-  .h-28 {
-    height: calc(var(--spacing) * 28);
-  }
   .h-44 {
     height: calc(var(--spacing) * 44);
-  }
-  .h-full {
-    height: 100%;
-  }
-  .w-28 {
-    width: calc(var(--spacing) * 28);
   }
   .w-44 {
     width: calc(var(--spacing) * 44);
   }
   .w-full {
     width: 100%;
-  }
-  .max-w-3xl {
-    max-width: var(--container-3xl);
   }
   .border-collapse {
     border-collapse: collapse;
@@ -407,14 +288,8 @@
     border-style: var(--tw-border-style);
     border-width: 3px;
   }
-  .border-black {
-    border-color: var(--color-black);
-  }
   .border-white {
     border-color: var(--color-white);
-  }
-  .bg-\[\#2c2f39\] {
-    background-color: #2c2f39;
   }
   .bg-gray-100 {
     background-color: var(--color-gray-100);
@@ -431,20 +306,11 @@
   .object-cover {
     object-fit: cover;
   }
-  .p-12 {
-    padding: calc(var(--spacing) * 12);
-  }
   .p-20 {
     padding: calc(var(--spacing) * 20);
   }
-  .px-12 {
-    padding-inline: calc(var(--spacing) * 12);
-  }
   .px-20 {
     padding-inline: calc(var(--spacing) * 20);
-  }
-  .py-11 {
-    padding-block: calc(var(--spacing) * 11);
   }
   .py-12 {
     padding-block: calc(var(--spacing) * 12);
@@ -526,10 +392,6 @@
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-xl {
-    --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
@@ -558,11 +420,10 @@
       }
     }
   }
-  .hover\:shadow-2xl {
+  .hover\:underline {
     &:hover {
       @media (hover: hover) {
-        --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+        text-decoration-line: underline;
       }
     }
   }
@@ -635,6 +496,15 @@
     @media (width >= 48rem) {
       font-size: var(--text-xl);
       line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .md\:hover\:underline {
+    @media (width >= 48rem) {
+      &:hover {
+        @media (hover: hover) {
+          text-decoration-line: underline;
+        }
+      }
     }
   }
   .lg\:w-\[950px\] {
