--- a/src/output.css
+++ b/src/output.css
@@ -20,6 +20,8 @@
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
+    --text-3xl: 1.875rem;
+    --text-3xl--line-height: calc(2.25 / 1.875);
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
     --text-5xl: 3rem;
@@ -187,221 +189,20 @@
   .top-20 {
     top: calc(var(--spacing) * 20);
   }
-<<<<<<< HEAD
-  .top-\[-1px\] {
-    top: -1px;
-  }
-  .top-\[-2px\] {
-    top: -2px;
-  }
-  .top-\[1px\] {
-    top: 1px;
-  }
-  .top-\[2px\] {
-    top: 2px;
-  }
-  .top-\[3px\] {
-    top: 3px;
-  }
-  .top-\[18px\] {
-    top: 18px;
-  }
   .top-\[19px\] {
     top: 19px;
-  }
-  .top-\[20px\] {
-    top: 20px;
-  }
-  .top-\[21px\] {
-    top: 21px;
-  }
-  .top-\[23px\] {
-    top: 23px;
-  }
-  .top-\[30px\] {
-    top: 30px;
-  }
-  .top-\[32px\] {
-    top: 32px;
-  }
-  .top-\[34px\] {
-    top: 34px;
-  }
-  .top-\[px\] {
-    top: px;
-  }
-  .top-\[x\] {
-    top: x;
-  }
-  .right-2 {
-    right: calc(var(--spacing) * 2);
-=======
-  .top-60 {
-    top: calc(var(--spacing) * 60);
-  }
-  .top-85 {
-    top: calc(var(--spacing) * 85);
-  }
-  .top-86 {
-    top: calc(var(--spacing) * 86);
-  }
-  .top-87 {
-    top: calc(var(--spacing) * 87);
-  }
-  .top-90 {
-    top: calc(var(--spacing) * 90);
-  }
-  .top-128 {
-    top: calc(var(--spacing) * 128);
-  }
-  .right-1 {
-    right: calc(var(--spacing) * 1);
-  }
-  .right-4 {
-    right: calc(var(--spacing) * 4);
->>>>>>> ae1ef90f4cfd02729845cacd4b03d94ab3922b65
-  }
-  .right-5 {
-    right: calc(var(--spacing) * 5);
-  }
-<<<<<<< HEAD
-  .right-20 {
-    right: calc(var(--spacing) * 20);
-  }
-  .right-22 {
-    right: calc(var(--spacing) * 22);
-  }
-  .right-23 {
-    right: calc(var(--spacing) * 23);
-  }
-  .right-24 {
-    right: calc(var(--spacing) * 24);
-  }
-  .right-25 {
-    right: calc(var(--spacing) * 25);
-  }
-  .right-\[1px\] {
-    right: 1px;
-  }
-  .right-\[3px\] {
-    right: 3px;
-  }
-  .right-\[9px\] {
-    right: 9px;
-  }
-  .right-\[91px\] {
-    right: 91px;
-  }
-  .right-\[92px\] {
-    right: 92px;
-  }
-  .right-\[93\] {
-    right: 93;
-  }
-  .right-\[93pc\] {
-    right: 93pc;
   }
   .right-\[93px\] {
     right: 93px;
   }
-  .right-\[94px\] {
-    right: 94px;
-  }
-  .right-\[95px\] {
-    right: 95px;
-  }
-  .right-\[103px\] {
-    right: 103px;
-  }
-  .right-\[148px\] {
-    right: 148px;
-  }
   .right-\[149px\] {
     right: 149px;
-  }
-  .right-\[150px\] {
-    right: 150px;
-  }
-  .right-\[152px\] {
-    right: 152px;
-  }
-  .right-\[203px\] {
-    right: 203px;
-  }
-  .right-\[px\] {
-    right: px;
-  }
-  .bottom-\[-1px\] {
-    bottom: -1px;
   }
   .bottom-\[1px\] {
     bottom: 1px;
   }
-  .bottom-\[2px\] {
-    bottom: 2px;
-  }
-  .bottom-\[3px\] {
-    bottom: 3px;
-  }
-  .bottom-\[4px\] {
-    bottom: 4px;
-  }
-  .bottom-\[33px\] {
-    bottom: 33px;
-  }
-  .bottom-\[px\] {
-    bottom: px;
-  }
-  .left-2 {
-    left: calc(var(--spacing) * 2);
-=======
-  .left-1 {
-    left: calc(var(--spacing) * 1);
-  }
-  .left-6 {
-    left: calc(var(--spacing) * 6);
->>>>>>> ae1ef90f4cfd02729845cacd4b03d94ab3922b65
-  }
-  .left-7 {
-    left: calc(var(--spacing) * 7);
-  }
   .left-16 {
     left: calc(var(--spacing) * 16);
-  }
-<<<<<<< HEAD
-  .left-40 {
-    left: calc(var(--spacing) * 40);
-  }
-  .left-\[3px\] {
-    left: 3px;
-  }
-  .left-\[103px\] {
-    left: 103px;
-=======
-  .left-20 {
-    left: calc(var(--spacing) * 20);
-  }
-  .left-24 {
-    left: calc(var(--spacing) * 24);
-  }
-  .left-40 {
-    left: calc(var(--spacing) * 40);
-  }
-  .left-100 {
-    left: calc(var(--spacing) * 100);
-  }
-  .left-128 {
-    left: calc(var(--spacing) * 128);
-  }
-  .left-129 {
-    left: calc(var(--spacing) * 129);
-  }
-  .left-130 {
-    left: calc(var(--spacing) * 130);
-  }
-  .left-150 {
-    left: calc(var(--spacing) * 150);
->>>>>>> ae1ef90f4cfd02729845cacd4b03d94ab3922b65
   }
   .col-span-2 {
     grid-column: span 2 / span 2;
@@ -421,109 +222,38 @@
   .grid {
     display: grid;
   }
-  .table {
-    display: table;
-  }
-<<<<<<< HEAD
   .h-0 {
     height: calc(var(--spacing) * 0);
-  }
-  .h-2 {
-    height: calc(var(--spacing) * 2);
-  }
-  .h-4 {
-    height: calc(var(--spacing) * 4);
-  }
-  .h-10 {
-    height: calc(var(--spacing) * 10);
-  }
-  .h-20 {
-    height: calc(var(--spacing) * 20);
   }
   .h-21 {
     height: calc(var(--spacing) * 21);
   }
-  .h-24 {
-    height: calc(var(--spacing) * 24);
-  }
   .h-26 {
     height: calc(var(--spacing) * 26);
   }
-  .h-30 {
-    height: calc(var(--spacing) * 30);
-  }
-  .h-40 {
-    height: calc(var(--spacing) * 40);
-  }
   .h-44 {
     height: calc(var(--spacing) * 44);
-  }
-  .h-80 {
-    height: calc(var(--spacing) * 80);
-  }
-  .w-20 {
-    width: calc(var(--spacing) * 20);
-  }
-  .w-24 {
-    width: calc(var(--spacing) * 24);
   }
   .w-26 {
     width: calc(var(--spacing) * 26);
   }
-  .w-30 {
-    width: calc(var(--spacing) * 30);
-  }
-=======
-  .h-44 {
-    height: calc(var(--spacing) * 44);
-  }
-  .w-20 {
-    width: calc(var(--spacing) * 20);
-  }
->>>>>>> ae1ef90f4cfd02729845cacd4b03d94ab3922b65
-  .w-40 {
-    width: calc(var(--spacing) * 40);
-  }
   .w-44 {
     width: calc(var(--spacing) * 44);
   }
-  .w-50 {
-    width: calc(var(--spacing) * 50);
-  }
-<<<<<<< HEAD
   .w-60 {
     width: calc(var(--spacing) * 60);
   }
-  .w-65 {
-    width: calc(var(--spacing) * 65);
-  }
   .w-80 {
     width: calc(var(--spacing) * 80);
-=======
-  .w-\[80px\] {
-    width: 80px;
->>>>>>> ae1ef90f4cfd02729845cacd4b03d94ab3922b65
   }
   .w-full {
     width: 100%;
-  }
-<<<<<<< HEAD
-  .flex-initial {
-    flex: 0 auto;
-  }
-=======
->>>>>>> ae1ef90f4cfd02729845cacd4b03d94ab3922b65
-  .border-collapse {
-    border-collapse: collapse;
   }
   .rotate-90 {
     rotate: 90deg;
   }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .resize {
-    resize: both;
   }
   .list-disc {
     list-style-type: disc;
@@ -543,24 +273,9 @@
   .grid-cols-13 {
     grid-template-columns: repeat(13, minmax(0, 1fr));
   }
-<<<<<<< HEAD
-  .flex-row {
-    flex-direction: row;
-  }
   .items-center {
     align-items: center;
   }
-=======
-  .items-center {
-    align-items: center;
-  }
-  .justify-between {
-    justify-content: space-between;
-  }
-  .gap-0 {
-    gap: calc(var(--spacing) * 0);
-  }
->>>>>>> ae1ef90f4cfd02729845cacd4b03d94ab3922b65
   .gap-1 {
     gap: calc(var(--spacing) * 1);
   }
@@ -578,10 +293,6 @@
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
-  }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
   }
   .border-0 {
     border-style: var(--tw-border-style);
@@ -621,12 +332,6 @@
   .py-16 {
     padding-block: calc(var(--spacing) * 16);
   }
-  .pt-0 {
-    padding-top: calc(var(--spacing) * 0);
-  }
-  .pt-1 {
-    padding-top: calc(var(--spacing) * 1);
-  }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
   }
@@ -635,9 +340,6 @@
   }
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
-  }
-  .pt-\[3px\] {
-    padding-top: 3px;
   }
   .pt-\[5px\] {
     padding-top: 5px;
@@ -657,13 +359,6 @@
   .text-justify {
     text-align: justify;
   }
-<<<<<<< HEAD
-  .text-3xl {
-    font-size: var(--text-3xl);
-    line-height: var(--tw-leading, var(--text-3xl--line-height));
-  }
-=======
->>>>>>> ae1ef90f4cfd02729845cacd4b03d94ab3922b65
   .text-4xl {
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
@@ -707,16 +402,9 @@
   .uppercase {
     text-transform: uppercase;
   }
-  .underline {
-    text-decoration-line: underline;
-  }
   .shadow-md {
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
   .transition-shadow {
     transition-property: box-shadow;
@@ -750,27 +438,14 @@
       }
     }
   }
-<<<<<<< HEAD
   .max-md\:hidden {
     @media (width < 48rem) {
       display: none;
     }
   }
-  .max-md\:overflow-hidden {
-    @media (width < 48rem) {
-      overflow: hidden;
-    }
-  }
-=======
->>>>>>> ae1ef90f4cfd02729845cacd4b03d94ab3922b65
   .max-sm\:hidden {
     @media (width < 40rem) {
       display: none;
-    }
-  }
-  .max-sm\:overflow-hidden {
-    @media (width < 40rem) {
-      overflow: hidden;
     }
   }
   .max-sm\:py-9 {
@@ -800,39 +475,11 @@
       line-height: var(--tw-leading, var(--text-sm--line-height));
     }
   }
-<<<<<<< HEAD
-  .md\:bottom-\[10px\] {
-    @media (width >= 48rem) {
-      bottom: 10px;
-    }
-  }
-  .md\:bottom-\[15px\] {
-    @media (width >= 48rem) {
-      bottom: 15px;
-    }
-  }
-  .md\:bottom-\[20px\] {
-    @media (width >= 48rem) {
-      bottom: 20px;
-    }
-  }
   .md\:bottom-\[21px\] {
     @media (width >= 48rem) {
       bottom: 21px;
     }
   }
-  .md\:bottom-\[22px\] {
-    @media (width >= 48rem) {
-      bottom: 22px;
-    }
-  }
-  .md\:bottom-\[23px\] {
-    @media (width >= 48rem) {
-      bottom: 23px;
-    }
-  }
-=======
->>>>>>> ae1ef90f4cfd02729845cacd4b03d94ab3922b65
   .md\:mx-5 {
     @media (width >= 48rem) {
       margin-inline: calc(var(--spacing) * 5);
@@ -851,21 +498,6 @@
   .md\:grid {
     @media (width >= 48rem) {
       display: grid;
-    }
-  }
-  .md\:h-2 {
-    @media (width >= 48rem) {
-      height: calc(var(--spacing) * 2);
-    }
-  }
-  .md\:h-21 {
-    @media (width >= 48rem) {
-      height: calc(var(--spacing) * 21);
-    }
-  }
-  .md\:h-23 {
-    @media (width >= 48rem) {
-      height: calc(var(--spacing) * 23);
     }
   }
   .md\:px-6 {
@@ -888,12 +520,6 @@
       }
     }
   }
-<<<<<<< HEAD
-  .lg\:right-\[149px\] {
-    @media (width >= 64rem) {
-      right: 149px;
-    }
-  }
   .lg\:bottom-\[2px\] {
     @media (width >= 64rem) {
       bottom: 2px;
@@ -901,10 +527,6 @@
   }
   .lg\:w-\[950px\] {
     @media (width >= 64rem) {
-=======
-  .lg\:w-\[950px\] {
-    @media (width >= 64rem) {
->>>>>>> ae1ef90f4cfd02729845cacd4b03d94ab3922b65
       width: 950px;
     }
   }
@@ -987,11 +609,6 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-duration {
   syntax: "*";
   inherits: false;
@@ -1031,7 +648,6 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-outline-style: solid;
       --tw-duration: initial;
       --tw-scale-x: 1;
       --tw-scale-y: 1;
